# text-typeset

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: settings.yml
.github/actions/strip-path-deps/: action.yml
.github/workflows/: audit.yml  ci.yml  release.yml  rust-next.yml
src/: atlas.rs  bridge.rs  document_flow.rs  font.rs  font_service.rs  layout.rs  lib.rs  render.rs  shaping.rs  types.rs  typesetter.rs
src/atlas/: allocator.rs  cache.rs  rasterizer.rs
src/font/: registry.rs  resolve.rs
src/layout/: block.rs  flow.rs  frame.rs  inline_markup.rs  line.rs  paragraph.rs  table.rs
src/render/: cursor.rs  decoration.rs  frame.rs  hit_test.rs
src/shaping/: run.rs  shaper.rs
tests/: atlas_tests.rs  debug_nav.rs  font_tests.rs  fuzz_robustness_tests.proptest-regressions  fuzz_robustness_tests.rs  helpers.rs  hit_test_tests.rs  integration_tests.rs  invariant_tests.proptest-regressions  invariant_tests.rs  known_bugs.rs  layout_tests.rs  navigation_tests.rs  render_tests.rs  scale_factor_tests.rs  shaping_tests.rs  single_line_tests.rs  snapshot_tests.rs  table_tests.rs
tests/snapshots/: snapshot_tests__snapshot_alignment_variations.snap  snapshot_tests__snapshot_character_geometry_is_monotonic.snap  snapshot_tests__snapshot_cursor_only_emits_one_cursor_decoration.snap  snapshot_tests__snapshot_hit_region_variant_names.snap  snapshot_tests__snapshot_hit_test_regions_across_line.snap  snapshot_tests__snapshot_hit_test_within_vs_past_last_line.snap  snapshot_tests__snapshot_multi_block_stacking_order.snap  snapshot_tests__snapshot_paragraph_line_counts_across_widths.snap  snapshot_tests__snapshot_paragraph_respects_max_lines.snap  snapshot_tests__snapshot_paragraph_wraps_at_narrow_width.snap  snapshot_tests__snapshot_selection_decoration_kinds.snap  snapshot_tests__snapshot_table_cell_ordering.snap
