[package]
name = "text-typeset"
version = "1.0.0"
authors = ["Cyril Jacquet <cyril.jacquet@ferntech.eu>"]
homepage = "https://github.com/jacquetc/text-typeset"
repository = "https://github.com/jacquetc/text-typeset"
documentation = "https://docs.rs/text-typeset/"
description = "Turns rich text documents into GPU-ready glyph quads"
keywords = ["text", "document", "format"]
categories = ["text-editors", "text-processing"]
license = "MPL-2.0"
readme = "README.md"
edition = "2024"

[features]
default = ["text-document"]
text-document = ["dep:text-document"]

[dependencies]
rustybuzz = "0.20"
swash = "0.2"
fontdb = "0.23.0"
etagere = "0.3"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"
anyhow = "1.0"
thiserror = "2.0"
text-document = { path = "../text-document/crates/public_api", version = "1.2.0", optional = true }

[dev-dependencies]
text-document = { path = "../text-document/crates/public_api", version = "1.2.0" }

[profile.release]
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
